Everything up to end of #402

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UniversityApp</title>
+    <title>Tech University</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,9 +9,33 @@
   </head>
 
   <body>
-    <%= link_to "Home", root_path %>
-    <%= link_to "About", about_path %>
-    <%= link_to "New Courses", courses_new_path %>
-    <%= yield %>
+    <header>
+      <%= render "layouts/navigation" %>
+
+      <% flash.each do |key, message| %>
+        <div class="container">
+          <div class="row sign-up-form">
+            <div class="col s12 m12 l12">
+              <div class="card-panel red lighten-2" id="fade-out-target">
+                <span class="white-text">
+                  <%= message %>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+
+    </header>
+
+    <main>
+      <div class="container">
+        <%= yield %>
+      </div>
+    </main>
+
+    <footer class="page-footer">
+       <%= render "layouts/footer" %>
+    </footer>
   </body>
 </html>
