--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -14,8 +14,7 @@
           <p>Course Enrollment: none </p>
         </div>
         <div class="card-action">
-          <a href="#">View Profile</a>
-          <a href="#">Contact</a>
+          <%= link_to "View Profile", student_path(student) %>
         </div>
       </div>
     </div>
