--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,29 +1,33 @@
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">three</a></li>
+  <li><%= session_link %></li>
+  <% if logged_in? %>
+    <li><%= link_to "Profile", student_path(current_user) %></li>
+  <% end %>
 </ul>
 <ul id="dropdown2" class="dropdown-content">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">three</a></li>
+  <li><%= session_link %></li>
+  <% if logged_in? %>
+    <li><%= link_to "Profile", student_path(current_user) %></li>
+  <% end %>
 </ul>
 <nav>
   <div class="container">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo right">Tech University</a>
+      <%= link_to "Tech university", root_path, class: "brand-logo right" %>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">Enrollments</a></li>
+        <li><%= link_to "Courses", root_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Students", students_path %></li>
+        <% end %>
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Account<i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
 
       <ul class="sidenav" id="mobile-demo">
-        <li><a href="#">Courses</a></li>
-        <li><a href="#">Enrollments</a></li>
+        <li><%= link_to "Courses", root_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Students", students_path %></li>
+        <% end %>
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Account<i class="material-icons right">arrow_drop_down</i></a></li>
       </ul>
     </div>
